@@ -24,7 +24,7 @@ public class BookServiceImpl implements BookService {
     @Override
     public Book validateAndGetBook(String isbn) {
         return bookRepository.findById(isbn)
-                .orElseThrow(() -> new BookNotFoundException(String.format("Book with isbn %s not found", isbn)));
+                .orElseThrow(() -> new BookNotFoundException("Book with isbn %s not found".formatted(isbn)));
     }
 
     @Override
